.: COMMIT 2 - 240622 :.

- Game Tic Tac Toe.


.: COMMIT 3 - 300622 :.

- Create folder with a new app my-app-fc.


.: COMMIT 4 - 300622:.

- Create new app testimonio-fc.
- Create componente funcional Testimonial.


.: COMMIT 5 - 050722 :.

- Delete testimonio app and create new component testimonio-fc.


.: COMMIT 6 - 050722 :.

- Create files testimonio.css and update app.css.


.: COMMIT 7 - 060722 :.

- Import file path css in Testimonio.css.
- Create styles css from class App and contenedor-principal in Testimonio.js
  in file App.css.
- Create styles css from class (contenedor-principal, imagen-testimonio
  contenedor-texto-testimonio) in file testimonio.css.




Notes: 
- Para poder ver los componentes en el html debemos exportar
  en cada uno de los archivos donde se encuentren los componentes
  y en el App.js debemos hacer las importaciones correspondientes
  a cada uno de los componentes; teniendo en cuenta la ruta del
  file.
- En exportacion nombrada (export function) podemos exportar varios
  componentes del mismo archivo (en el archivo app.js se debe importar { NOMBRE_COMPONENTE }).
  pero si usamos exportacion po default
  (export default) solo podemos exportar uno solo.