@@ -11,7 +11,7 @@ html, body {
 h1 {
     max-width: 940px;
     font-size: 2.5em;
-    font-family: Lato, sans-serif;
+    font-family: Lata, sans-serif;
     font-weight: 700;
     line-height: 1.1;
     margin: 40px 0;
